--- a/index.html
+++ b/index.html
@@ -14,11 +14,40 @@
   <div class="reveal">
     <div class="slides">
       <section>
-        <h1>Hello World!</h1>
+        <h1>ミキシングのやり方</h1>
       </section>
       <section>
-        <h2>Title</h2>
-        <p>Text</p>
+        <h2>おすすめプラグイン</h2>
+        <p>
+          Melda Production「
+          <a href="https://www.meldaproduction.com/MFreeFXBundle">MFreeFXBundle</a>」
+        </p>
+      </section>
+      <section>
+        <h3>MFreeFXBundle</h3>
+        <ul>
+          <li>無料</li>
+          <li>必要なプラグインが一通り揃っている</li>
+          <li>多すぎず少なすぎずの必要十分な機能</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Waves「
+          <a href="http://www.minet.jp/brand/waves/native-power-pack/">Power Pack</a>」</h2>
+      </section>
+      <section>
+        <h3>Power Pack</h3>
+        <ul>
+          <li>セール時で8000~9000円ほど</li>
+          <li>DAWのプラグインよりもワンランク上</li>
+          <li>プリセットも優秀</li>
+        </ul>
+      </section>
+      <section>
+        <h2>参考資料</h2>
+        <p>iZotope, "Mixing with iZotope" 2014,
+          <a href="http://downloads.izotope.com/guides/iZotope-Mixing-Guide-Principles-Tips-Techniques.pdf">http://downloads.izotope.com/guides/iZotope-Mixing-Guide-Principles-Tips-Techniques.pdf</a>
+        </p>
       </section>
     </div>
   </div>
