feat: 日付、解説と説明を追加

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <div class="slides">
       <section>
         <h1>ミキシングのやり方</h1>
+        <p>CombDTM 2018/06/09</p>
+        <p>響音カゲ</p>
       </section>
       <section>
         <h2>流れ</h2>
@@ -192,6 +194,12 @@
         <p>空間処理がめちゃくちゃになる</p>
         <p>音が籠もったり割れたりする</p>
         <p>各パートのバランスが崩れる(音が出たり引っ込んだりする)</p>
+      </section>
+      <section>
+        <h3>YoutubeやSoundCloudでは下手に音圧を上げるな</h3>
+        <p>空間がめちゃくちゃになる</p>
+        <p>音圧上がってると圧縮時にピーク(0db)超過して叩かれる</p>
+        <p>MP3にする曲はマスタリング時に-1.5dbぐらいはヘッドルーム確保</p>
       </section>
       <section>
         <h1>おすすめプラグイン</h1>
