--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <h2>事前準備</h2>
         <p>各音をすべて別々のミキサーに流す</p>
         <p>レイヤーしている音(重ねている音)は個別のセンドに流す</p>
-        <p>ドラム、ウワモノ、パッド、リードなどでセンドを作って流す</p>
+        <p>ドラム、ウワモノ、パッド、リード、ベースなどでセンドを作って流す</p>
         <p>各パートを色分けして瞬時に視認できるようにしておく(耳の良い時間は限られている)</p>
         <p>各パートで使うであろうプラグインは事前に刺しておく</p>
         <p>これを前の夜までにやっておく</p>
@@ -124,7 +124,7 @@
         <ul>
           <li>パライコ</li>
           <li>加工系EQ(Enhanced EQなど)</li>
-          <li>コンプレッサー(VC 76など)</li>
+          <li>コンプレッサー(VC 76、Maximusなど)</li>
           <li>ディストーション(Trash 2, Camelphatなど)</li>
           <li>アンプシミュレーター(FM8 Effectorなど)</li>
           <li>サチュレーター(Saturation Knobなど)</li>
@@ -156,6 +156,7 @@
         <h2>4. 空間処理</h2>
         <p>音の位置(パンポット)や奥行きを調節</p>
         <p>ディレイで広い位置決めをして、リバーブでなじませる</p>
+        <p>空間広げるディレイは基本ピンポンディレイ</p>
         <p>ディレイ→リバーブはセット</p>
         <p>リバーブは意図がない限り、空間がぶれるので1種類にした方がいい</p>
         <p class="red">ベース、キックには基本掛けない</p>
