--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>ミキシングのやり方 - CombDTM2018/06</title>
   <link rel="stylesheet" href="./node_modules/reveal/index.css">
   <link rel="stylesheet" href="./node_modules/reveal/theme/blood.css">
   <link rel="stylesheet" href="./index.css">
